--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('https://github.com/MohammedGangat/TestInstance/blob/main/forestbridge.jpeg');
+  background-image: url('./forestbridge.jpeg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
